# ia-hackaton

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
data/: classes.txt  data.yaml
data/labels/: train.cache  val.cache
data/xml/: aws_amazon_api_gateway_0000_aug_0.xml
docs/: avaliacao-desafio.md  desafio.md  planning.md  roteiro-apresentacao.md  threat-baseline.md
output/: aws_components.json  aws_components_threat_report.json  aws_components_threat_report.md  azure_components.json  azure_components_threat_report.json  azure_components_threat_report.md  train_azure_components.json  val_aws_components.json
runs/stride_mvp/: args.yaml
runs/stride_mvp2/: args.yaml
runs/stride_mvp3/: args.yaml  results.csv
runs/stride_mvp_gpu/: args.yaml  results.csv
runs/stride_mvp_gpu10/: args.yaml  results.csv
runs/stride_mvp_gpu11/: args.yaml  results.csv
runs/stride_mvp_gpu12/: args.yaml  results.csv
runs/stride_mvp_gpu2/: args.yaml
runs/stride_mvp_gpu3/: args.yaml
runs/stride_mvp_gpu4/: args.yaml  results.csv
runs/stride_mvp_gpu5/: args.yaml  results.csv
runs/stride_mvp_gpu6/: args.yaml  results.csv
runs/stride_mvp_gpu7/: args.yaml  results.csv
runs/stride_mvp_gpu8/: args.yaml  results.csv
runs/stride_mvp_gpu9/: args.yaml  results.csv
src/detector/: classes.py  predict_yolo.py  split_dataset.py  train_yolo.py  write_data_yaml.py  xml_to_yolo.py
src/knowledge_base/: catalog.py
src/report/: generate_report.py
src/stride/: interaction_rules.py  prioritization.py  rules.py
(+2 files in other folders)
